--- a/src/views/admin/articles/index.ejs
+++ b/src/views/admin/articles/index.ejs
@@ -26,7 +26,7 @@
                     <td><%= article.slug %></td>
                     <td><%= article.category.title %></td>
                     <td>
-                        <form method="get" action="/admin/article/edit/<%= article.id %>" style="display: inline;" >
+                        <form method="get" action="/admin/articles/edit/<%= article.id %>" style="display: inline;" >
                             <input type="hidden" name="id" value="<%= article.id %>">
                             <button class="btn btn-warning" >Editar</button>
                         </form>
