--- a/src/views/admin/categories/index.ejs
+++ b/src/views/admin/categories/index.ejs
@@ -11,19 +11,19 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <td>ID</td>
-                <td>Titulo</td>
-                <td>Slug</td>
-                <td>Ações</td>
+                <th>ID</th>
+                <th>Titulo</th>
+                <th>Slug</th>
+                <th>Ações</th>
             </tr>
         </thead>
         <tbody>          
             <% categories.forEach( category => { %>
                 <tr>
-                    <th><%= category.id %></th>
-                    <th><%= category.title %></th>
-                    <th><%= category.slug %></th>
-                    <th> 
+                    <td><%= category.id %></td>
+                    <td><%= category.title %></td>
+                    <td><%= category.slug %></td>
+                    <td> 
                         <form method="get" action="/admin/categories/edit/<%= category.id %>" style="display: inline;" >
                             <input type="hidden" name="id" value="<%= category.id %>">
                             <button class="btn btn-warning" >Editar</button>
@@ -32,7 +32,7 @@
                             <input type="hidden" name="id" value="<%= category.id %>">
                             <button class="btn btn-danger">Delete</button>
                         </form>
-                    </th>
+                    </td>
                 </tr>
             <% }); %>    
         </tbody>
