--- a/src/views/admin/categories/index.ejs
+++ b/src/views/admin/categories/index.ejs
@@ -14,7 +14,8 @@
                 <th>ID</th>
                 <th>Titulo</th>
                 <th>Slug</th>
-                <th>Ações</th>
+                <th>Editar</th>
+                <th>Deletar</th>
             </tr>
         </thead>
         <tbody>          
@@ -28,6 +29,8 @@
                             <input type="hidden" name="id" value="<%= category.id %>">
                             <button class="btn btn-warning" >Editar</button>
                         </form>
+                    </td>
+                    <td>
                         <form action="/categories/delete" method="POST" style="display: inline;" onsubmit="deleteConfirm(event, this)">
                             <input type="hidden" name="id" value="<%= category.id %>">
                             <button class="btn btn-danger">Delete</button>
