--- a/src/views/partials/homeNavbar.ejs
+++ b/src/views/partials/homeNavbar.ejs
@@ -12,4 +12,9 @@
             </li>
         <% })%>    
     </ul>
+    <ul class="navbar-nav ml-auto ">
+        <li class="nav-item">
+            <a class="nav-link" href="/login"> Login</a>
+        </li>
+    </ul>
 </nav>
